fix: missing spacing below editor in the new mail page

--- a/TelerikMvcWebMail/Content/new.scss
+++ b/TelerikMvcWebMail/Content/new.scss
@@ -59,7 +59,7 @@
     }
 
     table.k-editor {
-        margin: 15px 0 0;
+        margin: 15px 0;
         border-spacing: 10px;
 
         .k-editable-area {
